--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <h1>Hello World</h1>
-    <footer>Coded by Anne Sura</footer>
+    <footer>
+        Coded by <a href="https://github.com/annesura" target="_blank">Anne Sura</a>
+         on <a href="https://github.com/annesura/my-weather-project" target="_blank">GitHub</a>, 
+         hosted by <a href="https://weather-by-anne.netlify.app/" target="_blank">Netlify</a>
+    </footer>
 </body>
 </html>
