--- a/index.html
+++ b/index.html
@@ -6,7 +6,26 @@
     <title>My Weather Project</title>
 </head>
 <body>
-    <h1>Hello World</h1>
+    <header>
+        <form>
+            <input type="search" placeholder="Enter a city..." required />
+            <input type="submit" value="Search" />
+        </form>
+    </header>
+    <main>
+        <div>
+            <h1>Houston</h1>
+            <p>
+                Thursday 17:13, scattered clouds
+                <br />
+                Humidity: 66%, Wind: 3.13 km/h
+            </p>    
+        </div>
+        <div>
+            🌤️ 12°C
+        </div>
+
+    </main>
     <footer>
         Coded by <a href="https://github.com/annesura" target="_blank">Anne Sura</a>
          on <a href="https://github.com/annesura/my-weather-project" target="_blank">GitHub</a>, 
