--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="src/style.css" />
     <title>My Weather Project</title>
 </head>
 <body>
+    <div class="container">
     <header>
         <form>
             <input type="search" placeholder="Enter a city..." required />
@@ -31,5 +33,6 @@
          on <a href="https://github.com/annesura/my-weather-project" target="_blank">GitHub</a>, 
          hosted by <a href="https://weather-by-anne.netlify.app/" target="_blank">Netlify</a>
     </footer>
+</div>
 </body>
 </html>
