--- a/index.html
+++ b/index.html
@@ -4,15 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="src/style.css" />
-    <link rel="stylesheet" href="src/styles.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Baskervville+SC&family=Fira+Code:wght@300..700&family=IBM+Plex+Serif:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Source+Code+Pro&display=swap"
-      rel="stylesheet"
-    />
+    href="https://fonts.googleapis.com/css2?family=Baskervville+SC&family=Fira+Code:wght@300..700&family=IBM+Plex+Serif:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Source+Code+Pro&display=swap"
+    rel="stylesheet"
+  />
     <title>My Weather Project</title>
 </head>
 <body>
@@ -25,17 +20,19 @@
         </form>
     </header>
     <main>
+        <div class="weather-app-data">
         <div>
-            <h1>Houston</h1>
-            <p>
+            <h1 class="weather-app-city">Houston</h1>
+            <p class="weather-app-details">
                 Thursday 17:13, scattered clouds
                 <br />
-                Humidity: 66%, Wind: 3.13 km/h
+                Humidity: <span class="humidity-value">66%</span>, Wind: <span class="wind-speed">3.13km/h</span>
             </p>    
         </div>
-        <div>
-            🌤️ 12°C
+        <div class="weather-app-temperature-container">
+            <div class="weather-app-icon">🌤️</div><div class="weather-app-temperature">12</div><div class="weather-app-unit">°C</div> 
         </div>
+    </div>
 
     </main>
     <footer>
