Updated footer text

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 
     </main>
     <footer>
-        Coded by <a href="https://github.com/annesura" target="_blank">Anne Sura</a>
-         on <a href="https://github.com/annesura/my-weather-project" target="_blank">GitHub</a>, 
-         hosted by <a href="https://weather-by-anne.netlify.app/" target="_blank">Netlify</a>
+        This project was coded by <a href="https://github.com/annesura" target="_blank">Anne Sura</a>,
+         is <a href="https://github.com/annesura/my-weather-project" target="_blank">open-sourced on GitHub</a> 
+         and <a href="https://weather-by-anne.netlify.app/" target="_blank">hosted on Netlify</a>
     </footer>
 </div>
 <script src="src/index.js"></script>
