Added JS to the weather conditions and time
Changed some CSS of the temperature and icon. Added ids to each element

--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
         <div>
             <h1 class="weather-app-city" id="city">Houston</h1>
             <p class="weather-app-details">
-                Thursday 17:13, scattered clouds
+                <span id="time"></span>, <span id="description"></span>
                 <br />
-                Humidity: <span class="humidity-value">66%</span>, Wind: <span class="wind-speed">3.13km/h</span>
+                Humidity: <span class="humidity-value" id="humidity"></span>, Wind: <span class="wind-speed" id="wind-speed"></span>
             </p>    
         </div>
         <div class="weather-app-temperature-container">
-            <div class="weather-app-icon">🌤️</div><div class="weather-app-temperature" id="temperature">12</div><div class="weather-app-unit">°C</div> 
+            <div id="icon"></div><div class="weather-app-temperature" id="temperature">12</div><div class="weather-app-unit">°C</div> 
         </div>
     </div>
 
