--- a/index.html
+++ b/index.html
@@ -34,48 +34,8 @@
             <div id="icon"></div><div class="weather-app-temperature" id="temperature">12</div><div class="weather-app-unit">°C</div> 
         </div>
     </div>
-<div class="weather-forecast">
-    <div class="weather-forecast-day">
-        <div class="weather-forecast-date">Mon</div>
-        <div class="weather-forecast-icon">🌤️</div>
-        <div class="weather-forecast-temperatures"> 
-            <div class="weather-forecast-temperature"><strong>11°</strong></div>
-             <div class="weather-forecast-temperature">7°</div>
-            </div>
+<div class="weather-forecast" id="forecast">
     </div>
-    <div class="weather-forecast-day">
-        <div class="weather-forecast-date">Tues</div>
-        <div class="weather-forecast-icon">🌤️</div>
-        <div class="weather-forecast-temperatures"> 
-            <div class="weather-forecast-temperature"><strong>11°</strong></div>
-             <div class="weather-forecast-temperature">7°</div>
-            </div>
-    </div>
-    <div class="weather-forecast-day">
-        <div class="weather-forecast-date">Weds</div>
-        <div class="weather-forecast-icon">🌤️</div>
-        <div class="weather-forecast-temperatures"> 
-            <div class="weather-forecast-temperature"><strong>11°</strong></div>
-             <div class="weather-forecast-temperature">7°</div>
-            </div>
-    </div>
-    <div class="weather-forecast-day">
-        <div class="weather-forecast-date">Thurs</div>
-        <div class="weather-forecast-icon">🌤️</div>
-        <div class="weather-forecast-temperatures"> 
-            <div class="weather-forecast-temperature"><strong>11°</strong></div>
-             <div class="weather-forecast-temperature">7°</div>
-            </div>
-    </div>
-    <div class="weather-forecast-day">
-        <div class="weather-forecast-date">Fri</div>
-        <div class="weather-forecast-icon">🌤️</div>
-        <div class="weather-forecast-temperatures"> 
-            <div class="weather-forecast-temperature"><strong>11°</strong></div>
-             <div class="weather-forecast-temperature">7°</div>
-            </div>
-    </div>
-</div>
 
     </main>
     <footer>
