--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </p>    
         </div>
         <div class="weather-app-temperature-container">
-            <div id="icon"></div><div class="weather-app-temperature" id="temperature">12</div><div class="weather-app-unit">°C</div> 
+            <div id="icon"></div><div class="weather-app-temperature" id="temperature">12</div><div class="weather-app-unit">°F</div> 
         </div>
     </div>
 <div class="weather-forecast" id="forecast">
